# project4-wellness/swagger.json
@@ -701,13 +701,21 @@
           "400": {
             "description": "Validation or creation error"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "409": {
             "description": "Conflict"
           },
           "500": {
             "description": "Internal server error"
           }
-        }
+        },
+        "security": [
+          {
+            "cookieAuth": []
+          }
+        ]
       }
     },
     "/physical/{date}": {
@@ -786,13 +794,21 @@
           "400": {
             "description": "Validation or update error"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Entry not found"
           },
           "500": {
             "description": "Internal Server Error"
           }
-        }
+        },
+        "security": [
+          {
+            "cookieAuth": []
+          }
+        ]
       },
       "delete": {
         "tags": [
@@ -892,13 +908,21 @@
           "400": {
             "description": "Validation or creation error"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "409": {
             "description": "Conflict"
           },
           "500": {
             "description": "Internal server error"
           }
-        }
+        },
+        "security": [
+          {
+            "cookieAuth": []
+          }
+        ]
       }
     },
     "/intellectual/{date}": {
@@ -977,13 +1001,21 @@
           "400": {
             "description": "Validation or update error"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Entry not found"
           },
           "500": {
             "description": "Internal server error"
           }
-        }
+        },
+        "security": [
+          {
+            "cookieAuth": []
+          }
+        ]
       },
       "delete": {
         "tags": [
